# intensional-functions-ghc

./: .gitlab-ci.yml  .gitmodules  configure.ac  ghc-interp.js  ghc.mk  llvm-passes
.gitlab/: ci.sh  gen_ci.hs  jobs.yaml
compiler/: GHC.hs  ghc.cabal.in
compiler/GHC/: CmmToC.hs  Core.hs  CoreToIface.hs  CoreToStg.hs  Hs.hs  HsToCore.hs  IfaceToCore.hs  Parser.y  Platform.hs  Settings.hs  StgToCmm.hs  ThToHs.hs
compiler/GHC/Builtin/: Names.hs  PrimOps.hs  Types.hs  Uniques.hs  Uniques.hs-boot  Utils.hs  primops.txt.pp
compiler/GHC/Builtin/Names/: TH.hs
compiler/GHC/Builtin/PrimOps/: Ids.hs
compiler/GHC/Builtin/Types/: Prim.hs
compiler/GHC/ByteCode/: Instr.hs  Linker.hs
compiler/GHC/Cmm/: CLabel.hs  MachOp.hs  Parser.y
compiler/GHC/CmmToAsm/AArch64/: CodeGen.hs
compiler/GHC/CmmToLlvm/: CodeGen.hs
compiler/GHC/Core/: Coercion.hs  Coercion.hs-boot  DataCon.hs  FVs.hs  FamInstEnv.hs  Lint.hs  Make.hs  Ppr.hs  Predicate.hs  Reduction.hs  SimpleOpt.hs  Subst.hs  Tidy.hs  TyCon.hs  Type.hs  Unfold.hs  Unify.hs  UsageEnv.hs  Utils.hs
compiler/GHC/CoreToStg/: Prep.hs
compiler/GHC/Data/: Bag.hs  FastString.hs  Strict.hs
compiler/GHC/Driver/: Backend.hs  Backpack.hs  CodeOutput.hs  Env.hs  Flags.hs  Hooks.hs  Main.hs  Make.hs  Pipeline.hs  Session.hs
compiler/GHC/Hs/: Binds.hs  Decls.hs  Dump.hs  Expr.hs  Instances.hs  Pat.hs  Type.hs  Utils.hs
compiler/GHC/HsToCore/: Binds.hs  Docs.hs  Expr.hs  ListComp.hs  Match.hs  Monad.hs  Pmc.hs  Quote.hs  Ticks.hs  Usage.hs  Utils.hs
compiler/GHC/Iface/: Binary.hs  Env.hs  Load.hs  Make.hs  Recomp.hs  Rename.hs  Syntax.hs  Tidy.hs  Type.hs
compiler/GHC/JS/: Transform.hs
compiler/GHC/Linker/: Dynamic.hs  ExtraObj.hs  Loader.hs  Static.hs  Types.hs
compiler/GHC/Parser/: Annotation.hs  Errors.hs  Lexer.x  PostProcess.hs
compiler/GHC/Rename/: Bind.hs  Env.hs  Expr.hs  HsType.hs  Module.hs  Names.hs  Pat.hs  Splice.hs  Utils.hs
compiler/GHC/Runtime/: Context.hs  Debugger.hs  Eval.hs  Loader.hs
compiler/GHC/Settings/: IO.hs
compiler/GHC/Stg/: BcPrep.hs  InferTags.hs  Syntax.hs  Unarise.hs
compiler/GHC/StgToCmm/: Bind.hs  Closure.hs  DataCon.hs  Expr.hs  InfoTableProv.hs  Prim.hs  Types.hs
compiler/GHC/StgToJS/: CodeGen.hs  Expr.hs  Object.hs  Prim.hs  Types.hs
compiler/GHC/SysTools/: Info.hs  Tasks.hs
compiler/GHC/Tc/: Module.hs  Solver.hs  TyCl.hs  Types.hs  Validity.hs
compiler/GHC/Types/: Demand.hs  Hint.hs  Id.hs  Unique.hs  Var.hs
compiler/GHC/Unit/: Env.hs  Finder.hs  State.hs  Types.hs
compiler/GHC/Utils/: Misc.hs  Outputable.hs  Panic.hs  Touch.hs
compiler/Language/Haskell/: Syntax.hs
distrib/: configure.ac.in
docs/users_guide/: 9.8.1-notes.rst  debugging.rst  ghc_config.py.in  phases.rst  using-optimisation.rst  using-warnings.rst
docs/users_guide/exts/: explicit_namespaces.rst  ffi.rst  intensional_functions.rst  primitives.rst  required_type_arguments.rst  types.rst
docs/users_guide/rtd-theme/: layout.html
ghc/: Main.hs  ghc-bin.cabal.in
ghc/GHCi/: UI.hs
hadrian/: build-stack  cabal.project  hadrian.cabal  stack.yaml
hadrian/bindist/: Makefile  config.mk.in
hadrian/bootstrap/: bootstrap.py  generate_bootstrap_plans  plan-bootstrap-9_2_1.json  plan-bootstrap-9_2_2.json  plan-bootstrap-9_2_3.json  plan-bootstrap-9_2_4.json  plan-bootstrap-9_2_5.json  plan-bootstrap-9_4_1.json  plan-bootstrap-9_4_2.json  plan-bootstrap-9_4_3.json
hadrian/cfg/: system.config.in
hadrian/doc/: flavours.md
hadrian/src/: Base.hs  Builder.hs  Flavour.hs  Packages.hs
hadrian/src/Oracles/: Flag.hs  Setting.hs
hadrian/src/Rules/: BinaryDist.hs  Documentation.hs  Generate.hs  Lint.hs  Program.hs  Register.hs
hadrian/src/Settings/: Default.hs  Packages.hs
includes/: Cmm.h
libraries/base/: base.cabal  changelog.md
libraries/base/GHC/: Bits.hs  Exts.hs  IORef.hs  Real.hs
libraries/base/Unsafe/: Coerce.hs
libraries/base/tests/: T13660.hs  all.T
libraries/ghc-prim/: changelog.md  ghc-prim.cabal
libraries/ghc-prim/GHC/: CString.hs
libraries/ghc-prim/cbits/: atomic.c
libraries/template-haskell/: changelog.md
m4/: fp_bfd_support.m4  fp_find_libdw.m4  fp_find_libnuma.m4  fp_prog_ar_supports_dash_l.m4  fp_settings.m4  fptools_set_haskell_platform_vars.m4  ghc_get_power_abi.m4  ghc_toolchain.m4
rts/: Compact.cmm  Hpc.c  IPE.c  Interpreter.c  Linker.c  LinkerInternals.h  Prelude.h  PrimOps.cmm  Printer.c  RaiseAsync.c  RtsFlags.c  RtsStartup.c  RtsSymbols.c  Schedule.c  StgCRunAsm.S  StgMiscClosures.cmm  Task.h  Threads.c  configure.ac  external-symbols.list.in  package.conf.in  rts.buildinfo.in  rts.cabal.in
rts/adjustor/: NativePowerPC.c
rts/include/: Cmm.h
rts/include/rts/: Constants.h  PosixSource.h
rts/include/rts/storage/: ClosureMacros.h
rts/include/stg/: MiscClosures.h
rts/linker/: Elf.c  LoadArchive.c  PEi386.c  elf_got.c
rts/m4/: fp_cc_supports__atomics.m4  fp_check_pthreads.m4  fp_find_libdw.m4  fp_find_libnuma.m4  fp_large_address_space.m4
rts/posix/: OSMem.c  OSThreads.c  Select.c
rts/posix/ticker/: Pthread.c
rts/sm/: CheckGc.cpp  GC.c  NonMoving.c  NonMoving.h  NonMovingMark.c  Sanity.c  Storage.c
rts/win32/: AsyncMIO.c  AsyncWinIO.c  libHSbase.def
testsuite/driver/: runtests.py  testglobals.py  testlib.py
testsuite/tests/core-to-stg/: all.T
testsuite/tests/corelint/: T21115b.stderr
testsuite/tests/count-deps/: CountDepsAst.stdout  CountDepsParser.stdout
testsuite/tests/driver/: T4437.hs  all.T
testsuite/tests/interface-stability/: base-exports.stdout
testsuite/tests/module/: mod185.stderr
testsuite/tests/plugins/: all.T
testsuite/tests/printer/: T18791.stderr  Test20297.stdout
testsuite/tests/rebindable/: T18324.hs  T18324b.hs  all.T  pattern-fails.hs
testsuite/tests/rts/: all.T
testsuite/tests/th/: T10828.hs  T10828b.hs  all.T
utils/check-exact/: ExactPrint.hs  Main.hs  Transform.hs  Utils.hs
utils/dump-decls/: Main.hs
utils/genprimopcode/: Main.hs
utils/ghc-toolchain/src/: Main.hs
utils/hpc/: HpcCombine.hs  HpcDraft.hs  HpcFlags.hs  HpcMarkup.hs  HpcOverlay.hs  HpcReport.hs  HpcShowTix.hs  hpc-bin.cabal
(+198 files in other folders)
